# LearnLlamaIndex

./: Complete_Chat_API.md  README.md  main.py  pyproject.toml
learn/: __init__.py  model.py  settings.py
showcase/: .copier-answers.yml  pyproject.toml
showcase/ui/: pnpm-lock.yaml
storage/: default__vector_store.json  docstore.json  index_store.json
tests/: test_llms.py  test_loader.py  test_marker.py  test_settings.py
