[project]
name = "learnllamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "llama-index>=0.14.8",
    "llama-index-embeddings-langchain>=0.4.1",
    "llama-index-llms-deepseek>=0.2.2",
    "llama-index-llms-langchain>=0.7.1",
    "llama-index-llms-openai>=0.6.9",
    "llama-index-llms-zhipuai>=0.4.1",
    "pydantic>=2.12.4",
    "pyjwt>=2.8.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "zhipuai>=2.1.5.20250825",
]

# configure pytest asyncio
[tool.pytest.ini_options]
asyncio_mode = "auto"
